2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::delete): call -selectcommand if we delete
	something that was selected.

2004-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: correct use of PNG vs. GIF image.
	Don't abort creation of statusbar when gridded - just don't try
	to resize.
	Correct example to use label -width 1

2004-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl (new): Addition of a statusbar container widget
	* pkgIndex.tcl:        with resize control
	* Makefile.in:
	* BWman/contents.html: 
	* BWman/navtree.html:
	* BWman/StatusBar.html (new): 

2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* font.tcl (SelectFont::create): don't hardcode -bd 2 when
	creating the style selectbuttons.

	* dynhelp.tcl (_show_help): account for OS X help style

2004-05-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* listbox.tcl (_keyboard_navigation): make sure you can see the
	item that you key navigate to. (aas)

2004-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (_update_nodes): align with _draw_nodes code,
	specifically correcting placement of cross on new nodes and anchor
	of changed window/image.

2004-04-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* listbox.tcl (create): don't force -highlightthickness 1 as it
	prevents the user changing it on creation.
	(_draw_item): pass more cached info from _redraw_items for speed.
	(_redraw_selection): correct drawing of selfill for items that
	extend beyond the width of the window.

2004-04-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (edit): correct inversion of verifycmd emptiness test.
	* listbox.tcl: correct eval/after/lists usage.
	(_redraw_listbox): call _update_select_fill on redraw, otherwise
	the insert of items causes wonkiness.
	(_redraw_items): call update idle after changing cursor.
	(create): Insert $path into the canvas bindings, so that anyone
	binding directly onto the widget will see their bindings activated